# lab05

./: .gitignore  README.md  approximation_taylor_series.py  pyproject.toml
config/: gatorgrade.yml
writing/: reflection.md
