[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taylor-series-demo"
version = "1.0.0"
description = "Python demonstration of Taylor series for exponential and natural logarithm functions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Educational Demonstration"}
]
keywords = ["taylor-series", "mathematics", "approximation", "exponential", "logarithm", "educational"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
taylor-demo = "taylor_series_demo:interactive_demo"
taylor-simple = "simple_taylor_examples:main"

[project.urls]
Homepage = "https://github.com/example/taylor-series-demo"
Repository = "https://github.com/example/taylor-series-demo"
Issues = "https://github.com/example/taylor-series-demo/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]